Feat: Add snmp to pull from switches
